--- a/src/board/Board.css
+++ b/src/board/Board.css
@@ -1,4 +1,18 @@
-table{
-    border: 1px solid black;
-    border-collapse: collapse;
-  }
+table {
+  margin: 20px;
+  border-collapse: collapse;
+}
+
+.new-game {
+  width: 200px;
+  padding: 10px;
+  background-color: #45ce40;
+  border: 1px solid white;
+  border-radius: 10px;
+  color: white;
+}
+
+.players, table {
+  display: flex;
+  justify-content: center;
+}
