--- a/src/boxes/Boxes.css
+++ b/src/boxes/Boxes.css
@@ -1,9 +1,8 @@
- td{
-    border: 1px solid black;
-    border-collapse: collapse;
-      height:30px;
-      width:30px;
-      text-align:center;
-      font-weight: bold;
-  }
-  
+td {
+  border: 2px solid white;
+  border-collapse: collapse;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  font-weight: bold;
+}
